Prevent overflow of links

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -138,6 +138,7 @@ section section p {
 
 section section span {
     display: flex;
+    flex-wrap: wrap;
     font-size: .85em;
     gap: 8px;
 }
